# yume

./: .gitignore  Cargo.toml  README.md  build.rs
lib/: SDL2.lib
misc/: character list.txt
old_maps/Maps/: blocks.tsx  blue_ghost_world.tmx  blue_ghost_world.tsx  blue_ghost_world2.tmx  checkered_tiles_slanted.tsx  debug.tmx  debug.tsx  doors.tsx  entrances.tsx  forest.tmx  forest.tsx  inner_brain.tmx  inner_brain.tsx  maptest.tmx  mushroom_world.tmx  mushroom_world.tsx  neon.tmx  neon.tsx  neonred.tmx  nexus.tmx  nexus_pattern.tsx  stairwell.tsx  stairwell1.tmx  stairwell2.tmx  testLooping.tmx  tileWorld1.tmx  tileWorld2.tmx  tileWorld3.tmx  untitled.tmx  untitled2.tmx  whiteWorld.tmx  white_world.tsx
res/maps/: ash_forest.tmx  ash_forest.tsx  balcony.tmx  balcony2.tmx  balcony3.tmx  balcony4.tmx  beams.tmx  beams.tsx  bedroom.tmx  bedroom.tsx  bedroom_balcony.tmx  blue_ghost_world.tmx  blue_ghost_world.tsx  blue_ghost_world2.tmx  blue_ghost_world_looping.tmx  burned_forest.tmx  burned_forest.tsx  campus.tmx  carrot_field.tmx  checkered_tiles_slanted.tsx  checkered_tiles_world.tmx  dark_roads.tmx  dev.tmx  doors.tsx  dream_bedroom.tmx  dream_bedroom_balcony.tmx  floor_mats.tsx  flower_field.tmx  forest.tmx  forest.tsx  gray_beach.tmx  gritty_blood_world.tmx  hospital.tmx  hospital.tsx  loops.tmx  (+34 more)
saves/: .saves  0.save  1.save  2.save  4.save
src/: actions.rs  ai.rs  audio.rs  debug.rs  effect.rs  entity.rs  game.rs  loader.rs  lua.rs  main.rs  optimize.rs  particles.rs  player.rs  save.rs  screen_event.rs  texture.rs  tiles.rs  transitions.rs  ui.rs  world.rs
(+346 files in other folders)
