[package]
name = "yume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35", features = ["image", "bundled"] }
rand = "0.8"
tiled = "0.11"
json = "0.12"
rodio = "0.17"
rfd = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.10"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"